Improve managing packages

--- a/ansible_collections/pedrohdz/common/roles/packages/tasks/main.yaml
+++ b/ansible_collections/pedrohdz/common/roles/packages/tasks/main.yaml
@@ -4,6 +4,15 @@
     _packages_present: '{{ pedrohdz_packages | pedrohdz.common.present_packages }}'
     _packages_absent: '{{ pedrohdz_packages | pedrohdz.common.absent_packages }}'
 
+
+- name: List of packages to ensure are present.
+  ansible.builtin.debug:
+    msg: 'Packages to ensure are present: {{ _packages_present | join(" ") | default("NONE", true) }}'
+
+- name: List of packages to ensure are absent.
+  ansible.builtin.debug:
+    msg: 'Packages to ensure are absent: {{ _packages_absent | join(" ") | default("NONE", true) }}'
+
 - import_tasks: process-macports.yaml
   when: ansible_pkg_mgr == 'macports'
 
