--- a/ansible_collections/pedrohdz/common/roles/packages/tasks/process-apt.yaml
+++ b/ansible_collections/pedrohdz/common/roles/packages/tasks/process-apt.yaml
@@ -1,5 +1,120 @@
 ---
-- name: Apt
-  ansible.builtin.debug:
-    msg: HERE I AM
+# -----------------------------------------------------------------------------
+#
+# -----------------------------------------------------------------------------
+- name: Ensure minimum Apt packages
+  ansible.builtin.apt:
+    install_recommends: false
+    name:
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - gnupg
+      - software-properties-common
+    state: present
+    update_cache: true
+    cache_valid_time: 1800  # FIXME
+  become: '{{ pedrohdz_become_for_all }}'
+
+
+# -----------------------------------------------------------------------------
+#
+# -----------------------------------------------------------------------------
+
+# - name: Ensure HashiCorp's GPG key for Apt
+#   ansible.builtin.apt_key:
+#     id: DA418C88A3219F7B
+#     url: https://apt.releases.hashicorp.com/gpg
+#     state: present
+#
+# - name: Ensure Hashicorp Apt repository
+#   ansible.builtin.apt_repository:
+#     repo: "deb [arch=amd64] https://apt.releases.hashicorp.com {{ _packages_distribution_short_name.stdout_lines | first }} main"
+#     state: present
+#   when: ansible_architecture in ['x86_64', 'amd64']
+
+
+# FIXME - relocate!!  And switch!
+- name: Ensure unminimized Ubuntu installation.
+  ansible.builtin.shell:
+    cmd: yes | /usr/local/sbin/unminimize
+    removes: /etc/update-motd.d/60-unminimize
+  when: (ansible_distribution | lower) == 'ubuntu'
+
+
+- name: Fetch distribution release's short name
+  ansible.builtin.command:
+    cmd: lsb_release --codename --short
+    strip_empty_ends: true
+  changed_when: false
+  register: _packages_distribution_short_name_output
+
+- name: Set package distribution short name fact.
+  ansible.builtin.set_fact:
+    _packages_distribution_short_name: '{{ _packages_distribution_short_name_output.stdout_lines | first }}'
+
+- name: Ensure Helms's GPG key for Apt
+  ansible.builtin.apt_key:
+    id: 294AC4827C1A168A
+    url: https://baltocdn.com/helm/signing.asc
+    state: present
+
+- name: Ensure Helm's Apt repository
+  ansible.builtin.apt_repository:
+    repo: "deb https://baltocdn.com/helm/stable/debian/ all main"
+    state: present
+
+- name: Ensure Kubernetes's GPG key for Apt
+  ansible.builtin.apt_key:
+    id: FEEA9169307EA071
+    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+    state: present
+
+- name: Ensure Kubernetes's Apt repository
+  ansible.builtin.apt_repository:
+    repo: "deb https://apt.kubernetes.io/ kubernetes-xenial main"
+    state: present
+
+- name: Ensure Node.js's GPG key for Apt
+  ansible.builtin.apt_key:
+    id: 1655A0AB68576280
+    url: https://deb.nodesource.com/gpgkey/nodesource.gpg.key
+    state: present
+
+- name: Ensure Node.js's 14.x Apt repository
+  ansible.builtin.apt_repository:
+    repo: "deb https://deb.nodesource.com/node_14.x {{ _packages_distribution_short_name }} main"
+    state: present
+
+- name: Ensure Yarns's GPG key for Apt
+  ansible.builtin.apt_key:
+    id: 1646B01B86E50310
+    url: https://dl.yarnpkg.com/debian/pubkey.gpg
+    state: present
+
+- name: Ensure Yarns's Apt repository
+  ansible.builtin.apt_repository:
+    repo: "deb https://dl.yarnpkg.com/debian stable main"
+    state: present
+
+
+# -----------------------------------------------------------------------------
+#
+# -----------------------------------------------------------------------------
+- name: Ensure uninstalled Apt packages
+  ansible.builtin.apt:
+    install_recommends: false
+    name: '{{ _packages_absent }}'
+    state: absent
+    update_cache: false
+  become: '{{ pedrohdz_become_for_all }}'
+
+- name: Ensure installed Apt packages
+  ansible.builtin.apt:
+    install_recommends: false
+    name: '{{ _packages_present }}'
+    state: present
+    update_cache: true
+    cache_valid_time: 1800  # FIXME
+  become: '{{ pedrohdz_become_for_all }}'
 ...
