--- a/ansible_collections/pedrohdz/common/roles/packages/tasks/process-apt.yaml
+++ b/ansible_collections/pedrohdz/common/roles/packages/tasks/process-apt.yaml
@@ -30,4 +30,12 @@
     state: present
     update_cache: '{{ pedrohdz_package_update_cache }}'
   become: '{{ pedrohdz_become_for_all }}'
+
+
+- name: Ensure Apt alternative selection.
+  community.general.alternatives:
+    name: '{{ item[0] }}'
+    path: '{{ item[1] }}'
+  become: '{{ pedrohdz_become_for_all }}'
+  loop: '{{ _packages_alternatives }}'
 ...
