--- a/vars/all.yaml
+++ b/vars/all.yaml
@@ -1,6 +1,308 @@
 ---
 pedrohdz_packages:
   # ----
+  # Install
+  # ----
+  - name: Bulk System Specific Installs
+    packages: []
+    apt:
+      packages:
+        - build-essential
+    macports:
+      packages:
+        - port_cutleaves
+
+  - name: ant
+    apt:
+      packages:
+        - ant
+        - ant-contrib
+        - ant-doc
+        - ant-optional
+    macports: apache-ant
+
+  - name: aspell
+    apt:
+      packages:
+        - aspell
+        - aspell-en
+        - aspell-es
+        - aspell-sv
+    macports:
+      packages:
+        - aspell
+        - aspell-dict-en
+        - aspell-dict-es
+        - aspell-dict-sv
+
+  - name: dnsmasq
+    apt:
+      ignore: true
+
+  - name: helm
+    macports:
+      packages:
+        - helm-2.17
+        - helm-3.5
+        - helm_select
+      alternatives:
+        helm: helm3.5
+
+  - name: imagemagick
+    macports: ImageMagick
+
+  - name: make
+    macports: gmake
+
+  - name: netcat
+    apt:
+      packages:
+        - ncat
+        - netcat-openbsd
+      alternatives:
+        nc: /usr/bin/ncat
+    macports: gnetcat
+
+  - name: tar
+    apt:
+      packages:
+        - tar
+        #- tar-doc  # FIXME - broken on Debian
+    macports: gnutar
+
+  - name: sed
+    macports: gsed
+
+  - name: time
+    macports: gtime
+
+  - name: gnutls
+    apt:
+      packages:
+        - gnutls-bin
+        - gnutls-doc
+
+  - name: go
+    apt:
+      ignore: true
+
+  - name: inetutils
+    apt:
+      packages:
+        - iputils-arping
+        - iputils-clockdiff
+        - iputils-ping
+        - iputils-tracepath
+        - telnet
+        - traceroute
+
+  - name: kubectl
+    macports:
+      packages:
+        - kubectl-1.18
+        - kubectl-1.19
+        - kubectl-1.20
+        - kubectl_select
+      alternatives:
+        kubectl: kubectl1.20
+
+  - name: kubectx
+    apt:
+      ignore: true
+      # FIXME - Broken on Ubuntu
+
+  - name: ldnsutils
+    apt:
+      packages:
+        - dnsutils
+        - ldnsutils
+    macports: ldns
+
+  - name: less
+    apt:
+      alternatives:
+        pager: /usr/bin/less
+
+  - name: maven
+    macports:
+      packages:
+        - maven32
+        - maven_select
+      alternatives:
+        maven: maven32
+
+  - name: nodejs
+    macports:
+      packages:
+        - nodejs14
+        - npm7
+
+  - name: openjdk11
+    apt:
+      packages:
+        - openjdk-11-doc
+        - openjdk-11-jdk-headless
+
+  - name: openssh
+    apt:
+      packages:
+        - openssh-client
+
+  - name: python3
+    apt:
+      packages:
+        - python3-pip
+        - python3-virtualenv
+        - python3
+        - python3-dev
+        - python3-doc
+        - python3-venv
+    macports:
+      packages:
+        - pip_select
+        - py39-pip
+        - py39-virtualenv
+        - python39
+        - python3_select
+        - python_select
+        - py39-gnureadline
+        - virtualenv_select
+      alternatives:
+        pip3: pip39
+        pip: pip39
+        # TODO; Upgrade!!
+        python3: python37
+        python: python37
+        virtualenv: virtualenv39
+
+  - name: python2.7
+    apt:
+      packages:
+        #- python2-pip  # Not sure where these live, if at all...
+        #- python2-virtualenv
+        - python2.7
+        - python2.7-dev
+        - python2.7-doc
+    macports:
+      packages:
+        - py27-gnureadline
+        - py27-pip
+        - py27-virtualenv
+        - python27
+        - python2_select
+      alternatives:
+        pip2: pip27
+        python2: python27
+
+  - name: ruby
+    apt:
+      packages:
+        - ruby-full
+    macports:
+      packages:
+        - ruby27
+        - ruby_select
+      alternatives:
+        ruby: ruby27
+
+  - name: smbclient
+    macports:
+      packages:
+        - samba4
+
+  - name: s3cmd
+    apt:
+      ignore: true
+      # FIXME - Missing on Debian
+
+  - name: terraform
+    apt:
+      ignore: true
+      # FIXME - Binary on on amd64, no arm
+    macports:
+      packages:
+        - terraform-0.11
+        - terraform-0.12
+        - terraform-0.14
+        - terraform-0.15
+        - terraform_select
+      alternatives:
+        terraform: terraform0.15
+
+  - name: tmux
+    macports:
+      packages:
+        - tmux
+        - tmux-pasteboard
+
+  - name: unrar
+    apt:
+      ignore: true
+
+  - name: vim
+    apt:
+      packages:
+        - vim
+        - vim-doc
+      alternatives:
+        editor: /usr/bin/vim.basic
+        ex: /usr/bin/vim.basic
+        vi: /usr/bin/vim.basic
+        view: /usr/bin/vim.basic
+        vim: /usr/bin/vim.basic
+        vimdiff: /usr/bin/vim.basic
+    macports:
+      variant_name: vim
+      variant: +python37+huge
+      # FIXME - variant: +python39+huge+cscope
+
+  - asciidoc
+  - autoconf
+  - automake
+  - autossh
+  - bash
+  - bash-completion
+  - cmake
+  - coreutils
+  - cryptcat
+  - ctags
+  - curl
+  - cvs
+  - findutils
+  - flex
+  - gawk
+  - git
+  - git-secret
+  - gnupg2
+  - gradle
+  - graphviz
+  - grep
+  - htop
+  - lftp
+  - minicom
+  - mtools
+  - nmap
+  - p7zip
+  - pandoc
+  - proxychains-ng
+  - proxytunnel
+  - pssh
+  - pv
+  - qrencode
+  - shellcheck
+  - siege
+  - socat
+  - sshpass
+  - stunnel
+  - tor
+  - tree
+  - tsocks
+  - watch
+  - wget
+  - xmlstarlet
+  - yarn
+
+  # ----
   # Uninstall
   # ----
   - name: Bulk Macports Uninstall
@@ -55,281 +357,6 @@ pedrohdz_packages:
         #- python35
         #- python36
         #- python38
-
-
-  # ----
-  # Install
-  # ----
-  # - name: terraform
-  #   macports:
-  #     packages:
-  #       - terraform-0.11
-  #       - terraform-0.12
-  #       - terraform-0.14
-  #       - terraform-0.15
-  #       - terraform_select
-
-  - name: Bulk System Specific Installs
-    packages: []
-    apt:
-      packages:
-        - build-essential
-    macports:
-      packages:
-        - port_cutleaves
-
-  - name: ant
-    apt:
-      packages:
-        - ant
-        - ant-contrib
-        - ant-doc
-        - ant-optional
-    macports: apache-ant
-
-  - name: aspell
-    apt:
-      packages:
-        - aspell
-        - aspell-en
-        - aspell-es
-        - aspell-sv
-    macports:
-      packages:
-        - aspell
-        - aspell-dict-en
-        - aspell-dict-es
-        - aspell-dict-sv
-
-  - name: dnsmasq
-    apt:
-      ignore: true
-
-  - name: helm
-    macports:
-      packages:
-        - helm-2.17
-        - helm-3.5
-        - helm_select
-
-  - name: imagemagick
-    macports: ImageMagick
-
-  - name: make
-    macports: gmake
-
-  - name: netcat
-    apt:
-      packages:
-        - ncat
-        - netcat-openbsd
-    macports: gnetcat
-
-  - name: tar
-    apt:
-      packages:
-        - tar
-        #- tar-doc  # FIXME - broken on Debian
-    macports: gnutar
-
-  - name: sed
-    macports: gsed
-
-  - name: time
-    macports: gtime
-
-  - name: gnutls
-    apt:
-      packages:
-        - gnutls-bin
-        - gnutls-doc
-
-  - name: go
-    apt:
-      ignore: true
-
-  - name: inetutils
-    apt:
-      packages:
-        - iputils-arping
-        - iputils-clockdiff
-        - iputils-ping
-        - iputils-tracepath
-        - telnet
-        - traceroute
-
-  - name: kubectl
-    macports:
-      packages:
-        - kubectl-1.18
-        - kubectl-1.19
-        - kubectl-1.20
-        - kubectl_select
-
-  - name: kubectl
-    macports:
-      packages:
-        - kubectl-1.18
-        - kubectl-1.19
-        - kubectl-1.20
-        - kubectl_select
-
-  - name: kubectx
-    apt:
-      ignore: true
-      # FIXME - Broken on Ubuntu
-
-  - name: ldnsutils
-    apt:
-      packages:
-        - dnsutils
-        - ldnsutils
-    macports: ldns
-
-  - name: maven
-    macports:
-      packages:
-        - maven32
-        - maven_select
-
-  - name: nodejs
-    macports:
-      packages:
-        - nodejs14
-        - npm7
-
-  - name: openjdk11
-    apt:
-      packages:
-        - openjdk-11-doc
-        - openjdk-11-jdk-headless
-
-  - name: openssh
-    apt:
-      packages:
-        - openssh-client
-
-  - name: python3
-    apt:
-      packages:
-        - python3-pip
-        - python3-virtualenv
-        - python3
-        - python3-dev
-        - python3-doc
-        - python3-venv
-    macports:
-      packages:
-        - pip_select
-        - py39-pip
-        - py39-virtualenv
-        - python39
-        - python3_select
-        - python_select
-        - py39-gnureadline
-        - virtualenv_select
-
-  - name: python2.7
-    apt:
-      packages:
-        #- python2-pip  # Not sure where these live, if at all...
-        #- python2-virtualenv
-        - python2.7
-        - python2.7-dev
-        - python2.7-doc
-    macports:
-      packages:
-        - py27-gnureadline
-        - py27-pip
-        - py27-virtualenv
-        - python27
-        - python2_select
-
-  - name: ruby
-    apt:
-      packages:
-        - ruby-full
-    macports:
-      packages:
-        - ruby27
-        - ruby_select
-
-  - name: smbclient
-    macports:
-      packages:
-        - samba4
-
-  - name: s3cmd
-    apt:
-      ignore: true
-      # FIXME - Missing on Debian
-
-  - name: tmux
-    macports:
-      packages:
-        - tmux
-        - tmux-pasteboard
-
-  - name: unrar
-    apt:
-      ignore: true
-
-  - name: vim
-    apt:
-      packages:
-        - vim
-        - vim-doc
-    macports:
-      variant_name: vim
-      variant: +python37+huge
-      # FIXME - variant: +python39+huge+cscope
-
-  - asciidoc
-  - autoconf
-  - automake
-  - autossh
-  - bash
-  - bash-completion
-  - cmake
-  - coreutils
-  - cryptcat
-  - ctags
-  - curl
-  - cvs
-  - findutils
-  - flex
-  - gawk
-  - git
-  - git-secret
-  - gnupg2
-  - gradle
-  - graphviz
-  - grep
-  - htop
-  - less
-  - lftp
-  - minicom
-  - mtools
-  - nmap
-  - p7zip
-  - pandoc
-  - proxychains-ng
-  - proxytunnel
-  - pssh
-  - pv
-  - qrencode
-  - shellcheck
-  - siege
-  - socat
-  - sshpass
-  - stunnel
-  - tor
-  - tree
-  - tsocks
-  - watch
-  - wget
-  - xmlstarlet
-  - yarn
 
 
   # Move to workstation
