--- a/playbook.yaml
+++ b/playbook.yaml
@@ -1,16 +1,17 @@
 ---
 - hosts: all
   roles:
-    - pedrohdz.common.packages
+    - pedrohdz.common.baseline
+    #- pedrohdz.common.packages
   vars_files:
     - ['vars/os-{{ ansible_os_family }}.yaml', vars/os-defaults.yaml]
     - vars/all.yaml
     #- vars/simple-variants.yaml
 
-- hosts: workstation
-  roles:
-    - pedrohdz.common.packages
-  vars_files:
-    - ['vars/os-{{ ansible_os_family }}.yaml', vars/os-defaults.yaml]
-    - vars/workstation.yaml
+# - hosts: workstation
+#   roles:
+#     - pedrohdz.common.packages
+#   vars_files:
+#     - ['vars/os-{{ ansible_os_family }}.yaml', vars/os-defaults.yaml]
+#     - vars/workstation.yaml
 ...
