--- a/ansible_collections/pedrohdz/devenv/galaxy.yml
+++ b/ansible_collections/pedrohdz/devenv/galaxy.yml
@@ -6,7 +6,7 @@
 namespace: pedrohdz
 
 # The name of the collection. Has the same character restrictions as 'namespace'
-name: common
+name: devenv
 
 # The version of the collection. Must be compatible with semantic versioning
 version: 1.0.0
