--- a/ansible_collections/pedrohdz/devenv/roles/global_defaults/defaults/main.yml
+++ b/ansible_collections/pedrohdz/devenv/roles/global_defaults/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 pedrohdz_become_for_all: false
-pedrohdz_box_prefix: /opt/box
+pedrohdz_devenv_prefix: /opt/devbox
 pedrohdz_package_cache_valid_time: 1800
 pedrohdz_package_update_cache: false
 ...
