Added pyvenv_apps role.

--- a/ansible_collections/pedrohdz/devenv/roles/pyvenv_apps/meta/main.yml
+++ b/ansible_collections/pedrohdz/devenv/roles/pyvenv_apps/meta/main.yml
@@ -46,7 +46,7 @@
 #     #
 #     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
 #     #       Maximum 20 tags per role.
-
+#
 dependencies:
   - pedrohdz.devenv.global_defaults
-  - pedrohdz.devenv.apt_sources
+  - pedrohdz.devenv.baseline
