--- a/ansible_collections/pedrohdz/devenv/roles/global_defaults/defaults/main.yml
+++ b/ansible_collections/pedrohdz/devenv/roles/global_defaults/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 pedrohdz_devenv_become_for_all: false
+pedrohdz_devenv_force_upgrade_all: false
 pedrohdz_devenv_prefix: /opt/devbox
+
 pedrohdz_devenv_packages_cache_valid_time: 1800
 pedrohdz_devenv_packages_update_cache: false
 ...
