--- a/vars/all.yaml
+++ b/vars/all.yaml
@@ -1,4 +1,38 @@
 ---
+pedrohdz_devenv_pyvenv_apps:
+  - flake8
+  - isort
+  - netaddr
+  - pip-autoremove
+  - pipdeptree
+  - pylint
+  - tabulate
+  - tox
+  - yamllint
+
+  - name: ansible
+    packages: [ansible, ansible-lint]
+    bin_files: [
+      ansible, ansible-config, ansible-connection, ansible-console,
+      ansible-doc, ansible-galaxy, ansible-inventory, ansible-lint,
+      ansible-playbook, ansible-pull, ansible-test, ansible-vault
+    ]
+  - name: awscli
+    bin_files: [aws, aws_completer]
+  - name: bump2version
+    bin_files: [bump2version, bumpversion]
+  - name: ignr
+    packages: [wheel, https://github.com/Antrikshy/ignr.py/archive/master.zip]
+  - name: jmespath-terminal
+    bin_files: [jpterm]
+  - name: powerline-status
+    packages: [wheel, powerline-status]
+    bin_files: [powerline, powerline-config, powerline-daemon, powerline-lint,
+      powerline-render]
+  - name: sqlparse
+    bin_files: [sqlformat]
+
+
 pedrohdz_devenv_packages:
   # ----
   # Install
@@ -151,21 +185,23 @@ pedrohdz_devenv_packages:
   - name: python3
     apt:
       packages:
-        - python3-pip
-        - python3-virtualenv
         - python3
         - python3-dev
         - python3-doc
+        - python3-pip
         - python3-venv
+        - python3-virtualenv
+        - python3-wheel
     macports:
       packages:
         - pip_select
+        - py39-gnureadline
         - py39-pip
         - py39-virtualenv
+        - py39-wheel
         - python39
         - python3_select
         - python_select
-        - py39-gnureadline
         - virtualenv_select
       alternatives:
         pip3: pip39
@@ -188,6 +224,7 @@ pedrohdz_devenv_packages:
         - py27-gnureadline
         - py27-pip
         - py27-virtualenv
+        - py27-wheel
         - python27
         - python2_select
       alternatives:
@@ -204,6 +241,10 @@ pedrohdz_devenv_packages:
         - ruby_select
       alternatives:
         ruby: ruby27
+
+  - name: rust
+    apt:
+      packages: [cargo, cargo-doc, rust-gdb, rustc]
 
   - name: smbclient
     macports:
