--- a/ansible_collections/pedrohdz/devenv/roles/pyvenv_apps/tasks/process-install.yaml
+++ b/ansible_collections/pedrohdz/devenv/roles/pyvenv_apps/tasks/process-install.yaml
@@ -28,4 +28,5 @@
   loop: '{{ _pyvenv_bin_files }}'
   loop_control:
     loop_var: _pyvenv_bin_symlink_item
+    label: '{{ pedrohdz_devenv_prefix }}/bin/{{ _pyvenv_bin_symlink_item }}'
 ...
