--- a/roles/baseline/meta/main.yml
+++ b/roles/baseline/meta/main.yml
@@ -47,6 +47,5 @@
 #     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
 #     #       Maximum 20 tags per role.
 
-dependencies: []
-  # List your role dependencies here, one per line. Be sure to remove the '[]' above,
-  # if you add dependencies to this list.
+dependencies:
+  - pedrohdz.devenv.global_defaults
