--- a/.github/workflows/continuous-integration.yaml
+++ b/.github/workflows/continuous-integration.yaml
@@ -3,12 +3,9 @@ name: Continuous Integration
 
 on:
   push: {}
-  # # At 03:27 on Monday
-  # schedule:
-  #   - cron: '27 3 * * 1'
-
-env:
-  PYTHON_VERSION: '3.9'
+  # At 04:16 on Monday
+  schedule:
+    - cron: '16 4 * * 1'
 
 jobs:
   common-checks:
@@ -26,6 +23,7 @@ jobs:
   integration-test-linux:
     name: Linux integration tests
     runs-on: ubuntu-latest
+    needs: common-checks
     strategy:
       matrix:
         IMAGE:
@@ -43,6 +41,9 @@ jobs:
 
   integration-test-macports:
     name: Macports integration tests
+    needs:
+      - common-checks
+      - integration-test-linux
     runs-on: ${{ matrix.MACOS_WORKER_VERSION }}
     strategy:
       matrix:
@@ -59,30 +60,23 @@ jobs:
 
       - name: Add MacPorts to the build PATH
         run: |
-          set -o errexit
-          set -o nounset
           echo '/opt/local/sbin' >> $GITHUB_PATH
           echo '/opt/local/bin' >> $GITHUB_PATH
           echo '/opt/local/libexec/gnubin' >> $GITHUB_PATH
 
       - name: System information
         run: |
-          set -o errexit
           echo PATH="$PATH"
 
       - name: Install Ansible
         run: |
-          set -o errexit
-          set -o nounset
           /usr/bin/python3 -m venv .venv
           ./.venv/bin/pip3 install -U pip
           ./.venv/bin/pip3 install ansible
 
       - name: Run Ansible integration tests
+        working-directory: ansible_collections/pedrohdz/devenv/
         run: |
-          set -o errexit
-          set -o nounset
-          cd 'ansible_collections/pedrohdz/devenv'
           ../../../.venv/bin/ansible-test integration \
               --allow-destructive \
               --allow-root \
