--- a/ansible_collections/pedrohdz/devenv/roles/global_defaults/vars/debian.yaml
+++ b/ansible_collections/pedrohdz/devenv/roles/global_defaults/vars/debian.yaml
@@ -2,4 +2,5 @@
 __pedrohdz_devenv_default_group: root
 __pedrohdz_devenv_default_directory_mode: '0755'
 __pedrohdz_devenv_default_owner: root
+__pedrohdz_devenv_python_path: /usr/bin/python3
 ...
